responsive fix for footer spacing

--- a/_sass/_footer-widgets.scss
+++ b/_sass/_footer-widgets.scss
@@ -71,8 +71,5 @@
     @media only screen and (max-width: 991px) {
       margin-bottom: 80px;
     }
-    @media only screen and (max-width: 767px) {
-      padding-left: 25px;
-    }
   }
 }
